<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/fmMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingRight="5dp">

            <Spinner
                android:id="@+id/spMapType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cbTraffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onTrafficClick"
                android:text="@string/text_cbTraffic" />

            <CheckBox
                android:id="@+id/cbMyLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onMyLocationButtonClick"
                android:text="@string/text_cbMyLocationButton" />

            <CheckBox
                android:id="@+id/cbMyLocationLayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onMyLocationLayerClick"
                android:text="@string/text_cbMyLocationLayer" />

            <CheckBox
                android:id="@+id/cbZoomControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onZoomControlsClick"
                android:text="@string/text_cbZoomControls" />

            <CheckBox
                android:id="@+id/cbCompass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onCompassClick"
                android:text="@string/text_cbCompass" />

            <CheckBox
                android:id="@+id/cbScrollGestures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onScrollGesturesClick"
                android:text="@string/text_cbScrollGestures" />

            <CheckBox
                android:id="@+id/cbZoomGestures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onZoomGesturesClick"
                android:text="@string/text_cbZoomGestures" />

            <CheckBox
                android:id="@+id/cbRotateGestures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onRotateGesturesClick"
                android:text="@string/text_cbRotateGestures" />

            <CheckBox
                android:id="@+id/cbTiltGestures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="onTiltGesturesClick"
                android:text="@string/text_cbTiltGestures" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>